fix(swagger+backend): API修正
成功フラグの追加
エラーレスポンスをエラーオブジェクト内に返すように修正
